chore: update installs & datasets in notebooks

--- a/notebooks/02_e5_xgboost.ipynb
+++ b/notebooks/02_e5_xgboost.ipynb
@@ -35,7 +35,8 @@
    },
    "outputs": [],
    "source": [
-    "!pip install -q tqdm huggingface_hub numpy sentence-transformers chromadb xgboost datasets==2.21.0"
+    "# Install required packages in Google Colab\n",
+    "%pip install -q tqdm huggingface_hub numpy sentence-transformers chromadb xgboost datasets"
    ]
   },
   {
@@ -85,7 +86,6 @@
     "# Save model and ChromaDB to a persistent folder for reuse\n",
     "\n",
     "from google.colab import drive  # type: ignore\n",
-    "\n",
     "drive.mount(\"/content/drive\")"
    ]
   },
@@ -117,6 +117,16 @@
    },
    "source": [
     "## 📥 Load Dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "938773d5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%pip install -U datasets"
    ]
   },
   {
