--- a/notebooks/03_ft_llama_qlora.ipynb
+++ b/notebooks/03_ft_llama_qlora.ipynb
@@ -39,7 +39,7 @@
    },
    "outputs": [],
    "source": [
-    "!pip install -q transformers torch peft bitsandbytes trl accelerate wandb datasets==2.21.0"
+    "%pip install -q transformers torch peft bitsandbytes trl accelerate wandb datasets"
    ]
   },
   {
@@ -90,6 +90,15 @@
    },
    "source": [
     "## 🔀 Load Dataset from HF and Split into Train/Validation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%pip install -U datasets"
    ]
   },
   {
