--- a/notebooks/04_eval_llama_qlora.ipynb
+++ b/notebooks/04_eval_llama_qlora.ipynb
@@ -31,7 +31,7 @@
    },
    "outputs": [],
    "source": [
-    "!pip install -q  peft torch bitsandbytes transformers matplotlib datasets==2.21.0"
+    "%pip install -q  peft torch bitsandbytes transformers matplotlib datasets"
    ]
   },
   {
@@ -45,7 +45,6 @@
     "# imports\n",
     "\n",
     "import math\n",
-    "\n",
     "import matplotlib.pyplot as plt\n",
     "import torch\n",
     "import torch.nn.functional as F\n",
@@ -199,6 +198,15 @@
    "metadata": {},
    "source": [
     "## 📥 Load Dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%pip install -U datasets"
    ]
   },
   {
