--- a/notebooks/05_ensemble_model.ipynb
+++ b/notebooks/05_ensemble_model.ipynb
@@ -47,23 +47,8 @@
    },
    "outputs": [],
    "source": [
-    "pip install -q tqdm huggingface_hub numpy sentence-transformers chromadb xgboost peft torch bitsandbytes datasets==2.21.0"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "YWfBjv2IzPel",
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "id": "YWfBjv2IzPel",
-    "outputId": "4ffbdacf-18eb-42f4-f3f5-5fc9487d71d8"
-   },
-   "outputs": [],
-   "source": [
-    "pip install -q -U datasets"
+    "# Install required packages in Google Colab\n",
+    "%pip install -q tqdm huggingface_hub numpy sentence-transformers datasets chromadb xgboost peft torch bitsandbytes"
    ]
   },
   {
@@ -80,7 +65,6 @@
     "import os\n",
     "import re\n",
     "import zipfile\n",
-    "\n",
     "import chromadb\n",
     "import joblib\n",
     "import numpy as np\n",
@@ -116,7 +100,6 @@
     "# Mount Google Drive to access saved ChromaDB and XGBoost model files\n",
     "\n",
     "from google.colab import drive\n",
-    "\n",
     "drive.mount(\"/content/drive\")"
    ]
   },
@@ -166,6 +149,16 @@
    },
    "source": [
     "## 📥 Load Test Dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f9ca3e34",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%pip install -U datasets"
    ]
   },
   {
